# d8q-intelligentengine-stockcompass

./: .env.example  .gitignore  README.md  __init__.py  index.html  indicators_result.xlsx  keybindings.json  logging.conf  pyproject.toml  requirements.txt  run.py  settings.json  start.sh  start_compass.sh  todo.md  useful_cmd.md
Ashare/: Ashare.py  Demo1.py  Demo2.py  test.py
buy/: Config.py  DBClient.py  __init__.py  main.py  sina1.py  sina2.py  sina3.py
compass/: __init__.py  config.py
doc/: ASI指标.md  BIAS指标.md  BOLL指标.md  D8Q_Architecture_Design.md  KDJ指标.md  RSI指标.md  TODO.md  V2版本指标分析.md  VR指标.md  WR指标.md  clear.sql  d8q-architecture-verification.md  d8q-architecture.md  db.sql  stock2_integration_report.md  tushare.md  指标汇总.md  股票信息来源地址.md  股票分析提示词.md
docs/: Strategy_Group_Product_Requirements.md  Strategy_Group_UX_Design.md  Strategy_Group_UX_Wireframe.html  stockshark_llm_audit.md
funcat/: __init__.py  api.py  context.py  func.py  indicators.py  time_series.py
notebooks/: funcat-tutorial.ipynb
release/: industry.sql  release_2_19.md  release_2_20.md  release_2_24.md  release_4_30.md
scripts/: analysis_watchdog.sh  cleanup_analysis_service.sh  create_daily_recommendation_table.py  d8q-strategy.service  fetch_financial.py  fetch_valuation.py  fill_industry_concept.py  init_full.sh  init_stocks.py  pipeline.py  pipeline_config.py  pipeline_db.py  pipeline_fetcher.py  run_strategy_engine.py
src/: index.py
stock/: stock.pyproj
stockdata/: DailyStockCheckTaskV2.py  RecommendedStockCache.py  SECURITY_README.md  __init__.py  calc_indicator.py  (+16 more)
(+282 files in other folders)
